:bug: Fix images on iPhones

--- a/src/app/main-page/main-page-section/main-page-section.component.scss
+++ b/src/app/main-page/main-page-section/main-page-section.component.scss
@@ -6,12 +6,14 @@ $main-page-text-color: #fff;
 .main-page-section-background {
     position: relative;
     opacity: 0.8;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 100%;
+    width: 100%;
+    height: 200px;;
     .main-page-section-container {
+        display: none;
         position: absolute;
         top: 30%;
         width: 100%;
@@ -48,6 +50,30 @@ $main-page-text-color: #fff;
     }
 }
 
+.main-page-section-content.mobile-only {  
+    text-align: center;
+    color: $main-page-text-color;
+    padding: 30px;
+    &.section-link:hover {
+        cursor: pointer;
+    }
+    .main-page-section-caption {
+        border: 2px solid $main-text-color;
+        padding: 10px;
+        font-size: 14px;                
+        letter-spacing: 10px;
+        margin: 20px;
+        text-transform: uppercase;
+        text-decoration: none;
+        color: $main-page-text-color;
+    }
+
+    .main-page-section-description {
+        font-size: 14px;
+        padding-top: 20px;
+    }
+}
+
 @media (max-width: $media-breakpoint-md - 1) {
     .main-page-section-background {
         .main-page-section-container {
@@ -60,7 +86,10 @@ $main-page-text-color: #fff;
 
 @media (min-width: $media-breakpoint-md) {
     .main-page-section-background {
+        min-height: 100%;
+        background-attachment: fixed;
         .main-page-section-container {
+            display: block;
             .main-page-section-content-container {
                 max-width: $media-breakpoint-md;
                 margin: 0 auto; 
@@ -77,6 +106,9 @@ $main-page-text-color: #fff;
             }
         }
     }
+    .main-page-section-content.mobile-only {  
+        display: none;
+    }
 }
 
 @media (min-width: $media-breakpoint-lg) {
@@ -84,9 +116,6 @@ $main-page-text-color: #fff;
         .main-page-section-container {
             .main-page-section-content-container {
                 max-width: $media-breakpoint-lg;                
-                .main-page-section-content {
-                    
-                }
             }
         }
     }
